--- a/output.css
+++ b/output.css
@@ -554,8 +554,9 @@ video {
   display: none;
 }
 
-.m-0 {
-  margin: 0px;
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .flex {
@@ -570,8 +571,24 @@ video {
   height: 100vh;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-64 {
+  width: 16rem;
+}
+
 .w-1\/4 {
   width: 25%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .flex-col {
@@ -594,8 +611,47 @@ video {
   justify-content: center;
 }
 
+.gap-7 {
+  gap: 1.75rem;
+}
+
+.gap-14 {
+  gap: 3.5rem;
+}
+
+.gap-56 {
+  gap: 14rem;
+}
+
+.gap-48 {
+  gap: 12rem;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-orange-600 {
@@ -615,10 +671,6 @@ video {
   background-position: center;
 }
 
-.p-0 {
-  padding: 0px;
-}
-
 .p-7 {
   padding: 1.75rem;
 }
@@ -631,6 +683,11 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-14 {
@@ -649,6 +706,22 @@ video {
   padding-top: 24rem;
 }
 
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-7 {
+  padding-top: 1.75rem;
+}
+
+.pt-14 {
+  padding-top: 3.5rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -664,12 +737,32 @@ video {
   line-height: 1.75rem;
 }
 
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
 .font-semibold {
   font-weight: 600;
+}
+
+.text-orange-600 {
+  --tw-text-opacity: 1;
+  color: rgb(234 88 12 / var(--tw-text-opacity));
 }
 
 .text-white {
